--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
 
         <div class="sm-col sm-col-6 md-col-6 lg-col-4 xs-px1 xs-mb2">
             <a class="block relative bg-blue" href="{{ post.url | prepend: site.baseurl }}">
-              <div class="image ratio bg-cover" style="background-image:url({{ page.url | replace:'.html','.jpg' }});"></div>
+              <div class="image ratio bg-cover" style="background-image: url({{ page.url | replace:'.html','.jpg' | prepend: site.baseurl }});"></div>
               <h1 class="title p2 m0 absolute bold white bottom-0 left-0">{{ post.title }}</h1>
             </a>
         </div>
